--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Github Repot</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>HELLO</h1>
+   <div class="div1">
+    <div class="title">
+        <h1>Stay Focused on</h1>
+        <h1 class="heading">Mission 2022</h1>
+        <p>I become determined to do something special in this year.I got inspiration from Programming Hero team.If you have a dreams to be a good web devoloper than enroll without delay.</p>
+        <button>Enroll Now</button>
+        <img src="" alt="">
+    </div>
+   </div>
 </body>
 </html>
