--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1 class="heading">Mission 2022</h1>
         <p>I become determined to do something special in this year.I got inspiration from Programming Hero team.If you have a dreams to be a good web devoloper than enroll without delay.</p>
         <button>Enroll Now</button>
-        <img src="" alt="">
+        <img src="person-2.png" alt="">
     </div>
    </div>
 </body>
